# Alter-AI

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
deepfake/: demo_face_swap.py  face_swapper.py  pyproject.toml
image-gen/: pyproject.toml  stable_diffusion_2_1_batch.py  stable_diffusion_3_5_single.py
scripts/: fun.py  run.py
