[project]
name = "deep-fake"
version = "0.1.0"
description = "Deepfake project"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy<2.0", # stay on 1.x (last for Python 3.10)
    "matplotlib<3.10", # cap to <3.10 (3.8–3.9 works on 3.10)
    "opencv-python>=4.8.0,<5.0", # safe range for 3.10
    "onnxruntime<1.20", # avoids 3.11+ builds
    "insightface>=0.7.3",
]
